Fixed alignment on playlist feed page

--- a/frontend/src/components/playlist/playlist_css/playlist-feed.css
+++ b/frontend/src/components/playlist/playlist_css/playlist-feed.css
@@ -95,22 +95,15 @@
     border-color: white;
 }
 
-.title-feed {
+.feed-item-title {
     width: 33%;
     display: flex;
     justify-content: center;
 }
 
-.username-feed {
-    width: 33%;
-    display: flex;
-    justify-content: center;
-}
-
-.description-feed {
-    width: 33%;
-    display: flex;
-    justify-content: center;
+.feed-item-title #username{
+    position: relative;
+    left: -25px;
 }
 
 .description-text {
